plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
}

group 'org.avni_integration_service'
version '0.0.2-SNAPSHOT'

bootJar {
    enabled = false
}

jar {
    enabled = true
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':integration-common')
    implementation project(':integration-data')
    implementation project(':avni')
    implementation project(':util')
    implementation "log4j:log4j:1.2.17"
    implementation "joda-time:joda-time:2.10.10"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.bugsnag:bugsnag-spring:3.6.3'
}

test {
    useJUnitPlatform()
    mustRunAfter(":lahi:test")
}
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
